--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,153 @@
+html,body{
+	width: 100%;
+	height: 100%;
+	margin:0;
+	padding: 0;
+  overflow: hidden;
+}
+.video-area{
+  margin-bottom:20px;
+  text-align: center;
+}
+.video-box{
+	margin-top: 20px;
+}
 body {
   font-family: sans-serif;
+  font-size: 14px;
 }
 
 video {
-  max-width: 100%;
-  width: 320px;
+  width: 200px;
+  height: 200px;
+}
+button{
+	height: 50px;
+	border:none;
+	width: 100px;
+	outline-style: none;
+	background-color: #1c89ff;
+	color: #fff;
+	cursor: pointer;
+}
+button.handup{
+	background-color: #f34c02;
+}
+button.small{
+	height: 30px;
+	width: auto;
+}
+.room{
+	text-align: center;
+	font-size: 18px;
+}
+.send-area{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 50px;
+}
+.send-input{
+	padding-right: 200px;
+}
+.send-input input{
+	display: inline-block;
+	height: 50px;
+	width:100%;
+	outline-style: none;
+	padding-left: 20px;
+}
+.send-btn{
+	position: absolute;
+	right:0;
+	top: 0;
+	height: 50px;
+	font-size: 0;
+}
+.send-img{
+	position: relative;
+	display: inline-block;
+}
+.send-btn .send-img button{
+	border-right: 1px #fff solid;
+}
+.file-input{
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	opacity: 0;
+	z-index: 10;
+	cursor: pointer;
+}
+.message-box{
+  overflow-y: scroll;
+  min-height: 50px;
+  max-height: 500px;
+}
+
+.outside-room{
+	position: relative;
+	width: 100%;
+	/*height: 100%;*/
+	margin-top: 10%;
+	padding: 50px 0;
+	overflow: hidden;
+	/*background:url(../images/bg.jpg) no-repeat center center;*/
+}
+.blur{
+	position: absolute;
+	top:-10%;
+	left: -10%;
+	width: 120%;
+	height: 120%;
+	background:url(../images/bg.jpg) no-repeat center center;
+    -webkit-filter: blur(10px); /* Chrome, Opera */
+   -moz-filter: blur(10px);
+    -ms-filter: blur(10px);    
+        filter: blur(10px);
+        z-index: -1;
+}
+.join{
+	margin:0 auto;
+	/*padding-top: 50%;*/
+	width: 350px;
+	/*height: 500px;*/
+	/*border-color:rgba(255,255,255,.1);*/
+	padding: 50px 40px 40px 0;
+	background-color: #fff;
+	box-shadow: 0 0px 0px 8px rgba(255,255,255,.4);  
+}
+.join-item {
+	margin: 0 auto 20px;
+}
+.join-item label{
+	display: inline-block;
+	width: 110px;
+	text-align: right;
+	font-size: 14px;
+	color: #333;
+}
+.join-item input{
+	display: inline-block;
+	height: 30px;
+	width: 210px;
+	border: 1px #eee solid;
+	outline-style: none; 
+	border-radius: 4px;
+	font-size: 16px;
+	padding-left: 15px;
+}
+.join-item.button{
+	margin: 0 auto;
+	margin-top: 30px;
+	width: 300px;
+}
+.button button{
+	border-radius: 4px;
+	height: 40px;
+	width: 100%;
+	margin-left: 20px;
 }
